clusters/calcifer-cloud/apps/observability/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/part-of: calcifer-cloud-observability
