clusters/calcifer-cloud/apps/observability/home-ingest-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-ingest-traefik
  namespace: kube-system
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
  ports:
    - name: websecure
      port: 443
      targetPort: websecure
      nodePort: 32443
